[package]
name = "leakruntime"
version = "0.1.0"
authors = ["Linus Färnstrand <faern@faern.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2.20", optional = true, features = ["rt-threaded", "macros", "time"] }
#async-std = { version = "1.5.0", features = ["attributes"] }
async-std = { git = "https://github.com/dignifiedquire/async-std", branch = "feat/smol", features = ["attributes"] }
